<resources>
    <string name="app_name">"TacitChat"</string>
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="mine">我</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="login">登陆</string>
    <string name="new_user">新用户</string>
</resources>
